@@ -5,8 +5,7 @@ require 'action_controller/routing'
 require 'action_controller/resources'
 require 'action_controller/url_rewriter'
 require 'action_controller/status_codes'
-require 'action_view/template'
-require 'action_view/template_finder'
+require 'action_view'
 require 'drb'
 require 'set'
 
