@@ -32,7 +32,7 @@ module ActionView
       #      <i>Topics listed alphabetically</i>
       #    <% end %>
       def cache(name = {}, options = nil, &block)
-        handler = Base.handler_class_for_extension(current_render_extension.to_sym)
+        handler = Template.handler_class_for_extension(current_render_extension.to_sym)
         handler.new(@controller).cache_fragment(block, name, options)
       end
     end
