@@ -1,5 +1,7 @@
 *SVN*
 
+* Moved template handlers related code from ActionView::Base to ActionView::Template. [Pratik]
+
 * Tests for div_for and content_tag_for helpers. Closes #11223 [thechrisoshow]
 
 * Allow file uploads in Integration Tests.  Closes #11091 [RubyRedRick]
